fix: markdown popup z-index (#981)

--- a/src/components/WysiwygMarkdown/index.css
+++ b/src/components/WysiwygMarkdown/index.css
@@ -25,3 +25,7 @@
 .ant-modal-wrap {
   z-index: 100 !important;
 }
+
+div#block-menu-container {
+  z-index: 100;
+}
